--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ body, html {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 2% 15% 2% 15%;
 }
 
 header {
@@ -80,7 +80,7 @@ nav a:hover {
 
 .item img {
     width: 100%;
-    height: 200px;
+    height:400px;
     object-fit: cover;
 }
 
