--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: "Sedan", serif;
+    font-weight: 400;
+    font-style: normal;
     color: #fff;
     background-color: #000;
 }
-
+  
 .container {
     max-width: 800px;
     margin: 0 auto;
@@ -21,6 +23,9 @@ header {
     align-items: center;
     justify-content: center;
     position: relative;
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 header::after {
@@ -40,6 +45,12 @@ h1 {
     z-index: 1;
 }
 
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 2rem; 
+    }
+}
+
 nav {
     position: fixed;
     top: 20px;
@@ -48,15 +59,24 @@ nav {
 }
 
 nav a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     margin-left: 20px;
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 1.2rem;
     transition: color 0.3s ease;
 }
 
+@media screen and (max-width: 600px) {
+    nav a {
+        font-size: 0.8rem; /* Adjust as needed */
+    }
+}
+
 nav a:hover {
-    color: #ccc;
+    color: #818181;
 }
 
 .content {
