--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
 }
   
 .container {
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 2% 15% 2% 15%;
 }
@@ -100,7 +100,7 @@ nav a:hover {
 
 .item img {
     width: 100%;
-    height: 50%;
+    height: 400px;
     object-fit: cover;
 }
 
